# fastapi-keystone

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  VERSION  config.example.json  config.example.yaml  main.py  pyproject.toml
.cursor/rules/: fastapi-keystone.rules.md  tdd.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: api-response-type-constraints.md
docs/design-decisions/: config-extension-mechanism.md  config-testing-report.md  singleton-lock-choice.md
docs/notes/: FastAPI中间件的调用顺序.md  Redis数据库管理.md  YAML支持.md  对add_api_route的理解.md  打包元数据定义.md  打包的步骤.md  数据库支持.md  版本号管理.md  配置PyPi认证.md
docs/todo/: 清单.md
examples/basic/hello-world/: main.py
examples/basic/singleton-di/: README.md  config.json  main.py  requirements.txt
src/common/: dicts.py
src/config/: config.py
src/core/: exceptions.py
src/fastapi_keystone/common/: __init__.py  dicts.py
src/fastapi_keystone/config/: __init__.py  config.py
src/fastapi_keystone/core/: app.py  contracts.py  db.py  exceptions.py  logger.py  middleware.py  pagination.py  routing.py  server.py
tests/: test_app.py  test_common_dicts.py  test_config.py  test_config_extension.py  test_core_db.py  test_core_di.py  test_core_exceptions.py  test_core_middleware.py  test_core_request.py  test_core_response.py  test_core_server.py  test_etag_middleware.py  test_redis.py  test_routing.py
