[project]
name = "fastapi-keystone"
version = "0.1.0"
description = "基于fastapi的快速开发框架"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi>=0.115.12",
    "injector>=0.22.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "rich>=14.0.0",
    "sqlalchemy>=2.0.41",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "build>=1.2.2.post1",
    "isort>=6.0.1",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
    "twine>=6.1.0",
    "uvicorn>=0.34.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = "-s -v"

